# synthia-new

./: .gitignore  README.md  Untitled Diagram.drawio  cli.py  index.html  login_bulma.html  main.py  platform.db  pyproject.toml  webapp.py
connectors/: credentials.py  download.py  gpt.py  models.py  session.py  settings.py  tts.py  users.py  utils.py
connectors/data/: base_models.json
gpt4/: GPT_4.md  chatgpt.js  package-lock.json  package.json
gpt4/www/: index.html
logs/: nsfw-230213  roleplay-230214
plugins/: commands.py  dalle.py  download.py
static/: app.html  chat.css  chat.js  core.js  dark.html  empty_bg.html  index.html  interact.html  mic.js  policies.html
static/assets/bootstrap/css/: bootstrap.min.css
static/bs/: index.html  model_studio.html
static/components/: login.html  mic.html  signup.html
static/syn/: browse.html  files.js  index.html  index2.html  realtime.js  syn.html
static/syn/starter-templates/: default.html
templates/: chat.html  chat_bs.html  dark.html  index.html  login.html  model_studio.html  models.html  register.html
